# gotcha

./: .gitignore  CMakeLists.txt  README.md  test.sh
examples/: evaluate_disparity.py
examples/corner/: kp_gt_40000.txt
include/: ALSC.h  CALSCParam.h  CAlscAdapt.h  CAutoAdapt.h  CDTMParam.h  CDensifyParam.h  CGOTCHAParam.h  CIPDetector.h  CIPDetectorParam.h  CIPParamAdapt.h  CInterestPoint.h  CMutualAdapt.h  CProjParam.h  CRectify.h  CRectifyParam.h  CSIFTParam.h  CSURFParam.h  CTiePt.h  CTiePtAdapt.h  Densify.h  TPHandler.h  alscworker.h  timer.h  tpqueue.h  visitedmap.h
src/: ALSC.cpp  CAlscAdapt.cpp  CAutoAdapt.cpp  CIPParamAdapt.cpp  CIPdetector.cpp  CInterestPoint.cpp  CMutualAdapt.cpp  Densify.cpp  TPHandler.cpp  alscworker.cpp  gotcha.cpp  timer.cpp  tpgen.cpp  tpqueue.cpp  visitedmap.cpp
